--- a/config/mosquitto.conf
+++ b/config/mosquitto.conf
@@ -231,7 +231,7 @@
 # listener 0 /tmp/mosquitto.sock
 #
 # listener port-number [ip address/host name/unix socket path]
-#listener
+listener 1883
 
 # By default, a listener will attempt to listen on all supported IP protocol
 # versions. If you do not have an IPv4 or IPv6 interface you may wish to
@@ -529,7 +529,7 @@
 # Defaults to false, unless there are no listeners defined in the configuration
 # file, in which case it is set to true, but connections are only allowed from
 # the local machine.
-#allow_anonymous false
+allow_anonymous true
 
 # -----------------------------------------------------------------
 # Default authentication and topic access control
